// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingButton styles should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999999;
  color: #1A1A1A;
  padding: 8px calc(24px - 1px);
  border-radius: 8px;
  position: relative;
  overflow: hidden;
}

.circuit-3:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-3:focus::-moz-focus-inner {
  border: 0;
}

.circuit-3:disabled,
.circuit-3[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-3:hover {
  background-color: #FAFBFC;
  border-color: #333333;
}

.circuit-3:active {
  background-color: #F5F5F5;
  border-color: #1A1A1A;
}

.circuit-1 {
  display: block;
  width: 24px;
  height: 24px;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out, visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, visibility 120ms ease-in-out;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-2 {
  opacity: 1;
  visibility: visible;
  -webkit-transform: scale3d(1,1,1);
  -ms-transform: scale3d(1,1,1);
  transform: scale3d(1,1,1);
  -webkit-transition: opacity 120ms ease-in-out, -webkit-transform 120ms ease-in-out, visibility 120ms ease-in-out;
  -webkit-transition: opacity 120ms ease-in-out, transform 120ms ease-in-out, visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, transform 120ms ease-in-out, visibility 120ms ease-in-out;
}

<button
  aria-busy="false"
  aria-live="polite"
  class="circuit-3"
>
  <span
    class="circuit-1"
  >
    <span
      class="circuit-0"
    >
      Loading
    </span>
  </span>
  <span
    class="circuit-2"
  >
    Things take time
  </span>
</button>
`;

exports[`LoadingButton styles should render with loading styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999999;
  color: #1A1A1A;
  padding: 8px calc(24px - 1px);
  border-radius: 8px;
  position: relative;
  overflow: hidden;
}

.circuit-3:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-3:focus::-moz-focus-inner {
  border: 0;
}

.circuit-3:disabled,
.circuit-3[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-3:hover {
  background-color: #FAFBFC;
  border-color: #333333;
}

.circuit-3:active {
  background-color: #F5F5F5;
  border-color: #1A1A1A;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-1 {
  display: block;
  width: 24px;
  height: 24px;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out, visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, visibility 120ms ease-in-out;
  opacity: 1;
  visibility: visible;
}

.circuit-2 {
  opacity: 1;
  visibility: visible;
  -webkit-transform: scale3d(1,1,1);
  -ms-transform: scale3d(1,1,1);
  transform: scale3d(1,1,1);
  -webkit-transition: opacity 120ms ease-in-out, -webkit-transform 120ms ease-in-out, visibility 120ms ease-in-out;
  -webkit-transition: opacity 120ms ease-in-out, transform 120ms ease-in-out, visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, transform 120ms ease-in-out, visibility 120ms ease-in-out;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: scale3d(0,0,0);
  -ms-transform: scale3d(0,0,0);
  transform: scale3d(0,0,0);
}

<button
  aria-busy="true"
  aria-live="polite"
  class="circuit-3"
  disabled=""
>
  <span
    class="circuit-1"
  >
    <span
      class="circuit-0"
    >
      Loading
    </span>
  </span>
  <span
    class="circuit-2"
  >
    Things take time
  </span>
</button>
`;
